<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Aurora</string>
    <string name="app_version">v1.0</string>
    <string name="bntLogin">Login</string>
    <string name="bntRegisterNew">Need account? Register!</string>

    <string name="msgLogin">Accessing to Aurora…</string>
    <string name="msgEmptyUserPass">Username and/or Password are empty!</string>
    
    <string name="msgBluetoothNotAvailable">Sorry, bluetooh not available!</string>
    <string name="msgBluetoothEnabled">Bluetooth enabled! Application ready</string>
    
    <string name="m_scan">Scan for Aurora</string>
    <string name="m_exit">Close application</string>
    <string name="m_settings">Settings</string>
    <string name="m_about">About…</string>
        
    <string name="bntBack">Back</string>
    
    <string name="pref_cat_account">Account information</string>
    <string name="pref_cat_application">Application</string>
   
    <string name="pref_edtusername_dialogMessage">Insert you email:</string>
    <string name="pref_edtusername_summary">Insert you email for access to Aurora website</string>
    <string name="pref_edtusername_title">Email:</string>
    
    <string name="pref_edtpassword_dialogMessage">Insert you password:</string>
    <string name="pref_edtpassword_summary">Insert you password for access to Aurora website</string>
    <string name="pref_edtpassword_title">Password:</string>
   
    <string name="pref_cbupdates_summary">Check this for enable automatic updated</string>
    <string name="pref_cbupdates_title">Check updates:</string>
    
    <string name="pref_cbdataupload_summary">Check this for enable data upload</string>
    <string name="pref_cbdataupload_title">Data upload:</string>
    
    <string name="pref_lstdataupload_inverval_summary">Define how often updates will be performed</string>
    <string name="pref_lstdataupload_inverval_title">Updates interval</string>
   
   <string name="every_10sec">Every 10 seconds</string>
   <string name="every_30sec">Every 30 seconds</string>
   <string name="every_1min">Every 1 minute</string>
   <string name="every_5min">Every 5 minute</string>
   
   <string name="btMsgConnecting">Connecting</string> 
    <string name="btMsgConnected">Connected to</string> 
    <string name="btMsgNotConnected">Not connected</string> 
    <string name="btMsgUnable">Unable to connect to device</string> 
    <string name="btMsgLost">Connection lost</string> 
    
     <!-- Oh..we got easter egg here :) -->
     <string name="msgDedication" >"Dedicated to Simona and Aly\n"This is dedicated to the woman I love\nWherever she stands - my dedication"</string>
     
    
    
    
</resources>
