<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_cat_application"
        android:title="@string/pref_cat_application" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_cb_updates"
            android:summary="@string/pref_cbupdates_summary"
            android:title="@string/pref_cbupdates_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="dataupload"
            android:summary="@string/pref_cbdataupload_summary"
            android:title="@string/pref_cbdataupload_title" />

        <ListPreference
            android:defaultValue="1000"
            android:dependency="dataupload"
            android:entries="@array/updateInterval"
            android:entryValues="@array/updateIntervalValues"
            android:key="dataupload_interval"
            android:summary="@string/pref_lstdataupload_inverval_summary"
            android:title="@string/pref_lstdataupload_inverval_title" />
        
        
    </PreferenceCategory>
    <PreferenceCategory
        android:key="first_category"
        android:title="@string/pref_cat_account" >
        <EditTextPreference
            android:defaultValue=""
            android:dialogMessage="@string/pref_edtusername_dialogMessage"
            android:dialogTitle="@string/pref_cat_account"
            android:key="email"
            android:summary="@string/pref_edtusername_summary"
            android:title="@string/pref_edtusername_title" />
        <EditTextPreference
            android:defaultValue=""
            android:dialogMessage="@string/pref_edtpassword_dialogMessage"
            android:dialogTitle="@string/pref_cat_account"
            android:inputType="textPassword"
            android:key="password"
            android:summary="@string/pref_edtpassword_summary"
            android:title="@string/pref_edtpassword_title" />
    </PreferenceCategory>

</PreferenceScreen>